[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-tebex-integration"
version = "0.1.0"
description = "placeholder"
authors = [
    { name = "niko-at-chalupa" },
    { name = "MakiTazo" }
]
dependencies = [
    "endstone",
    "aiohttp",
]

[project.entry-points."endstone"]
tebex = "endstone_tebex:TebexIntegrationPlugi"

[tool.hatch.build.targets.wheel]
packages = ["src/endstone_tebex"]